fix: translations, typos

--- a/lang/en.json
+++ b/lang/en.json
@@ -128,7 +128,7 @@
     "Controls the language used in YAFFA.": "Controls the language used in YAFFA.",
     "Count": "Count",
     "Create an account to start using YAFFA": "Create an account to start using YAFFA",
-    "Crete from existing values": "Crete from existing values",
+    "Create from existing values": "Create from existing values",
     "Currencies": "Currencies",
     "Currency": "Currency",
     "Currency added": "Currency added",
@@ -631,7 +631,7 @@
     "sandbox.login.fill": "Login with demo credentials",
     "sandbox.login.info": "You can create a new account for testing by registering. Feel free to use a disposable email address or fake credential. You can also explore existing demo data using the credentials below.",
     "sandbox.reset.info": "Until that, feel free to look around and make any changes.",
-    "sandbox:reset:timer": "The data in this sandbox environment is regularly cleared. Time until next reset: :days days and :hours hours.",
+    "sandbox.reset.timer": "The data in this sandbox environment is regularly cleared. Time until next reset: :days days and :hours hours.",
     "schedule count": "schedule count",
     "schedule end date": "schedule end date",
     "schedule frequency": "schedule frequency",
