--- a/lang/fr.json
+++ b/lang/fr.json
@@ -64,15 +64,15 @@
     "Annualized ROI": "Retour sur investissement annualisé",
     "Any": "N'importe lequel",
     "Apply filters": "Appliquer les filtres",
-    "Are you looking for any of these payees?": "Recherchez-vous l'un de ces bénéficiaires ?",
-    "Are you sure to abandon this form?": "Êtes-vous sûr de vouloir abandonner ce formulaire ?",
-    "Are you sure to want to delete this item?": "Êtes-vous sûr de vouloir supprimer cet élément ?",
-    "Are you sure to want to reprocess this email? Current data will be overwritten.": "Êtes-vous sûr de vouloir retraiter ce courriel ? Les données actuelles seront écrasées.",
-    "Are you sure you want to discard any changes?": "Êtes-vous sûr de vouloir annuler toutes les modifications ?",
-    "Are you sure you want to merge these categories?": "Êtes-vous sûr de vouloir fusionner ces catégories ?",
-    "Are you sure you want to merge these payees?": "Êtes-vous sûr de vouloir fusionner ces bénéficiaires ?",
-    "Are you sure you want to set this currency as the default one?\\n\\nWhile this action is reversible, it starts a process that may take a while to complete.": "Êtes-vous sûr de vouloir définir cette devise comme devise par défaut ?\\n\\nBien que cette action soit réversible, elle lance un processus qui peut prendre un certain temps à se terminer.",
-    "Are you sure, you want to change the transaction type? Some data might get lost.": "Êtes-vous sûr de vouloir modifier le type de transaction ? Des données pourraient être perdues.",
+    "Are you looking for any of these payees?": "Recherchez-vous l'un de ces bénéficiaires?",
+    "Are you sure to abandon this form?": "Êtes-vous sûr de vouloir abandonner ce formulaire?",
+    "Are you sure to want to delete this item?": "Êtes-vous sûr de vouloir supprimer cet élément?",
+    "Are you sure to want to reprocess this email? Current data will be overwritten.": "Êtes-vous sûr de vouloir retraiter ce courriel? Les données actuelles seront écrasées.",
+    "Are you sure you want to discard any changes?": "Êtes-vous sûr de vouloir annuler toutes les modifications?",
+    "Are you sure you want to merge these categories?": "Êtes-vous sûr de vouloir fusionner ces catégories?",
+    "Are you sure you want to merge these payees?": "Êtes-vous sûr de vouloir fusionner ces bénéficiaires?",
+    "Are you sure you want to set this currency as the default one?\\n\\nWhile this action is reversible, it starts a process that may take a while to complete.": "Êtes-vous sûr de vouloir définir cette devise comme devise par défaut?\\n\\nBien que cette action soit réversible, elle lance un processus qui peut prendre un certain temps à se terminer.",
+    "Are you sure, you want to change the transaction type? Some data might get lost.": "Êtes-vous sûr de vouloir modifier le type de transaction? Des données pourraient être perdues.",
     "Assets": "Actifs",
     "Assign remaining amount to this item": "Attribuez le montant restant à cet article",
     "Automatic recording": "Enregistrement automatique",
@@ -128,7 +128,7 @@
     "Controls the language used in YAFFA.": "Contrôle la langue utilisée dans YAFFA.",
     "Count": "Compter",
     "Create an account to start using YAFFA": "Créez un compte pour commencer à utiliser YAFFA",
-    "Crete from existing values": "Crète à partir de valeurs existantes",
+    "Create from existing values": "Crète à partir de valeurs existantes",
     "Currencies": "devises",
     "Currency": "Devise",
     "Currency added": "Devise ajoutée",
@@ -148,7 +148,7 @@
     "Customize YAFFA": "Personnaliser YAFFA",
     "Daily": "Tous les jours",
     "Dashboard": "Tableau de bord",
-    "Database error:": "Erreur de base de données :",
+    "Database error:": "Erreur de base de données:",
     "Date": "Date",
     "Date from": "Dater de",
     "Date to": "Date à",
@@ -159,13 +159,13 @@
     "Delete merged category": "Supprimer la catégorie fusionnée",
     "Delete merged payee": "Supprimer le bénéficiaire fusionné",
     "Deleting rate...": "Taux de suppression...",
-    "Deleting transaction #:transactionId": "Suppression de la transaction n° : transactionId",
+    "Deleting transaction #:transactionId": "Suppression de la transaction n° :transactionId",
     "Deposit": "Dépôt",
     "Details": "Détails",
-    "Details of transaction #:transaction": "Détails de la transaction n° :transaction",
+    "Details of transaction #:transaction": "Détails de la transaction n° :transaction",
     "Dismiss": "Rejeter",
     "Dividend": "Dividende",
-    "Do you have an account?": "Avez-vous un compte ?",
+    "Do you have an account?": "Avez-vous un compte?",
     "Don't show category recommendations for this payee any more": "Ne plus afficher de recommandations de catégories pour ce bénéficiaire",
     "E-Mail Address": "E-mail",
     "Edit": "Modifier",
@@ -188,18 +188,18 @@
     "Error": "Erreur",
     "Error changing investment active state": "Erreur lors du changement d'état actif de l'investissement",
     "Error changing tag active state": "Erreur lors du changement d'état actif de l'étiquette",
-    "Error deleting transaction (#:transactionId): :error": "Erreur lors de la suppression de la transaction (#:transactionId) : :error",
+    "Error deleting transaction (#:transactionId): :error": "Erreur lors de la suppression de la transaction (#:transactionId): :error",
     "Error skipping transaction (#:transactionId): :error": "Erreur lors de l'omission de la transaction (#:transactionId): :error",
     "Error while changing account active state.": "Erreur lors de la modification de l'état actif du compte.",
     "Error while changing category active state.": "Erreur lors du changement d'état actif de la catégorie.",
     "Error while fetching account balance data": "Erreur lors de la récupération des données du solde du compte",
     "Error while retrieving data": "Erreur lors de la récupération des données",
     "Error while trying to delete account": "Erreur lors de la tentative de suppression du compte",
-    "Error while trying to delete account group: ": "Erreur lors de la tentative de suppression du groupe de comptes :",
-    "Error while trying to delete category: ": "Erreur lors de la tentative de suppression de la catégorie :",
+    "Error while trying to delete account group: ": "Erreur lors de la tentative de suppression du groupe de comptes:",
+    "Error while trying to delete category: ": "Erreur lors de la tentative de suppression de la catégorie:",
     "Error while trying to delete email": "Erreur lors de la tentative de suppression de l'e-mail",
     "Error while trying to delete investment": "Erreur lors de la tentative de suppression de l'investissement",
-    "Error while trying to delete investment group: ": "Erreur lors de la tentative de suppression du groupe d'investissement :",
+    "Error while trying to delete investment group: ": "Erreur lors de la tentative de suppression du groupe d'investissement:",
     "Error while trying to delete payee": "Erreur lors de la tentative de suppression du bénéficiaire",
     "Estimated end value": "valeur finale estimée",
     "Exchange rate": "Taux de change",
@@ -218,7 +218,7 @@
     "Find transactions": "Trouver des transactions",
     "First available data": "Premières données disponibles",
     "First transaction": "Première transaction",
-    "Forgot Your Password?": "Mot de passe oublié ?",
+    "Forgot Your Password?": "Mot de passe oublié?",
     "Frequency": "Fréquence",
     "From": "Depuis",
     "Go to account": "Accéder au compte",
@@ -237,9 +237,9 @@
     "Have your base currency set": "Définissez votre devise de base",
     "Hide": "Cacher",
     "Hide this recommendation, but it might be displayed later": "Masquer cette recommandation, mais elle pourrait s'afficher ultérieurement.",
-    "Home": "Maison",
-    "How long would you like YAFFA to calculate forecasts.": "Combien de temps souhaitez-vous que YAFFA consacre aux prévisions ?",
-    "Hungarian": "hongrois",
+    "Home": "Accueil",
+    "How long would you like YAFFA to calculate forecasts.": "Combien de temps souhaitez-vous que YAFFA consacre aux prévisions?",
+    "Hungarian": "Hongrois",
     "I accept the <a href=\":toslink\" target=\"_blank\">terms of service</a>": "J'accepte les <a href=\":toslink\" target=\"_blank\">conditions d'utilisation</a>",
     "ISIN number": "Numéro ISIN",
     "ISO Code": "Code ISO",
@@ -297,7 +297,7 @@
     "Linked transaction": "Transaction liée",
     "List of currencies": "Liste des devises",
     "List of investments": "Liste des investissements",
-    "List prices": "Prix ​​catalogue",
+    "List prices": "Prix catalogue",
     "Load account transaction history": "Historique des transactions du compte",
     "Load data": "Charger les données",
     "Load missing rates": "Charger les taux manquants",
@@ -421,7 +421,7 @@
     "Received email": "Courriel reçu",
     "Received emails": "Courriels reçus",
     "Reconciled": "Réconciliés",
-    "Register": "Registre",
+    "Register": "S'inscrire",
     "Register a new account": "Créer un nouveau compte",
     "Reload": "Recharger",
     "Remaining amount to": "Montant restant à",
@@ -433,7 +433,7 @@
     "Reset Password": "Réinitialiser le mot de passe",
     "Result": "Résultat",
     "Results": "Résultats",
-    "Results for search term:": "Résultats pour le terme de recherche :",
+    "Results for search term:": "Résultats pour le terme de recherche:",
     "Review currency settings": "Vérifier les paramètres de devise",
     "Right click on a transaction to open a context menu with actions.": "Faites un clic droit sur une transaction pour ouvrir un menu contextuel proposant des actions.",
     "Running total": "Total cumulé",
@@ -561,9 +561,9 @@
     "Transactions": "Transactions",
     "Transactions by criteria": "Transactions par critères",
     "Transfer": "Transfert",
-    "Transfer from :account": "Transfert depuis : compte",
+    "Transfer from :account": "Transfert depuis :account",
     "Transfer from :account_from to :account_to": "Transfert de :account_from vers :account_to",
-    "Transfer to :account": "Virement vers :compte",
+    "Transfer to :account": "Virement vers :account",
     "Type": "Taper",
     "Unavailable": "Indisponible",
     "Uncleared": "Non débloqué",
@@ -576,7 +576,7 @@
     "User settings updated": "Paramètres utilisateur mis à jour",
     "Validation failed. Please check the form for errors.": "La validation a échoué. Veuillez vérifier le formulaire pour détecter d'éventuelles erreurs.",
     "Value": "Valeur",
-    "Verification link sent!": "Lien de vérification envoyé !",
+    "Verification link sent!": "Lien de vérification envoyé!",
     "Verify Your Email Address": "Vérifiez votre adresse e-mail",
     "View details": "Voir les détails",
     "View investment details": "Consultez les détails de l'investissement",
@@ -587,8 +587,8 @@
     "Warning": "Avertissement",
     "We recommend completing the following steps to have a great experience with YAFFA.": "Nous vous recommandons de suivre les étapes suivantes pour profiter pleinement de votre expérience avec YAFFA.",
     "Weekly": "Hebdomadaire",
-    "Welcome to YAFFA!": "Bienvenue à YAFFA !",
-    "Welcome to your YAFFA dashboard!": "Bienvenue sur votre tableau de bord YAFFA !",
+    "Welcome to YAFFA!": "Bienvenue à YAFFA!",
+    "Welcome to your YAFFA dashboard!": "Bienvenue sur votre tableau de bord YAFFA!",
     "Where to merge category": "Où fusionner les catégories",
     "Where to merge payee": "Où fusionner les bénéficiaires",
     "With forecast": "Avec des prévisions",
@@ -608,7 +608,7 @@
     "Your changes have been saved!": "Vos modifications ont été enregistrées !",
     "Zoom in": "Zoomer",
     "account": "compte",
-    "account.requirement.accountGroup": "Avant de créer un compte, veuillez ajouter au moins un groupe de comptes. Par exemple : espèces, comptes bancaires, épargne, etc. Les groupes de comptes permettent de mieux organiser vos comptes.",
+    "account.requirement.accountGroup": "Avant de créer un compte, veuillez ajouter au moins un groupe de comptes. Par exemple: espèces, comptes bancaires, épargne, etc. Les groupes de comptes permettent de mieux organiser vos comptes.",
     "account.requirement.currency": "Avant de créer un compte, veuillez ajouter au moins une devise. Un compte doit obligatoirement être associé à une devise.",
     "amount to": "montant à",
     "callback.cloneTransaction": "Cloner cette transaction",
@@ -627,11 +627,11 @@
     "investment.requirement.investmentGroup": "Avant de créer un investissement, veuillez ajouter au moins un groupe d'investissement (par exemple, actions, obligations, etc.). Les groupes d'investissement permettent d'organiser vos placements.",
     "price": "prix",
     "quantity": "quantité",
-    "sandbox.login.credentials": "<strong>Courriel :</strong> demo@yaffa.cc <strong>Mot de passe :</strong> demo",
+    "sandbox.login.credentials": "<strong>Courriel:</strong> demo@yaffa.cc <strong>Mot de passe:</strong> demo",
     "sandbox.login.fill": "Connectez-vous avec les identifiants de démonstration",
     "sandbox.login.info": "Vous pouvez créer un nouveau compte de test en vous inscrivant. N'hésitez pas à utiliser une adresse e-mail jetable ou de faux identifiants. Vous pouvez également explorer les données de démonstration existantes en utilisant les identifiants ci-dessous.",
     "sandbox.reset.info": "En attendant, n'hésitez pas à regarder autour de vous et à apporter des modifications.",
-    "sandbox:reset:timer": "Les données de cet environnement de test sont régulièrement effacées. Prochaine réinitialisation : jours et heures.",
+    "sandbox.reset.timer": "Les données de cet environnement de test sont régulièrement effacées. Prochaine réinitialisation :days jours et :hours heures.",
     "schedule count": "nombre de jours de planification",
     "schedule end date": "date de fin prévue",
     "schedule frequency": "fréquence de planification",
