--- a/lang/hu.json
+++ b/lang/hu.json
@@ -128,7 +128,7 @@
     "Controls the language used in YAFFA.": "A YAFFA megjelenési nyelve.",
     "Count": "Gróf",
     "Create an account to start using YAFFA": "A YAFFA használatához hozz létre egy számlát",
-    "Crete from existing values": "Kréta a meglévő értékekből",
+    "Create from existing values": "Létrehozás meglévő értékekből",
     "Currencies": "Pénznemek",
     "Currency": "Pénznem",
     "Currency added": "Pénznem létrehozva",
@@ -631,8 +631,7 @@
     "sandbox.login.fill": "Belépés a demo fiókba",
     "sandbox.login.info": "Regisztrálj és készíts egy saját fiókot a teszteléshez. Használj eldobható email címet és bármilyen kitalált adatot. Ismerd meg a demo adatokat az alábbi belépési adatokkal.",
     "sandbox.reset.info": "A törlésig nézz körül és próbálj ki bármilyen funkciót.",
-    "sandbox.reset.timer": "A teszt környezetben az adatok rendszeresen visszaállításra kerülnek. Idő a következő törlésig: :days nap, :hours óra.",
-    "sandbox:reset:timer": "A sandbox környezetben található adatok rendszeresen törlődnek. A következő visszaállításig hátralévő idő: :days days and :hours hours.",
+    "sandbox.reset.timer": "A teszt környezetben az adatok rendszeresen visszaállításra kerülnek. Idő a következő törlésig :days nap, :hours óra.",
     "schedule count": "ütemezett számláló",
     "schedule end date": "ütemezés befejezési dátuma",
     "schedule frequency": "menetrend gyakorisága",
