fix: translations, typos

--- a/lang/fr.json
+++ b/lang/fr.json
@@ -123,7 +123,7 @@
     "Commissions": "Commissions",
     "Confirm new password": "Confirmer le nouveau mot de passe",
     "Confirm password": "Confirmez le mot de passe",
-    "Congratulations! Keep using YAFFA. You can dismiss this widget.": "Félicitations ! Continuez à utiliser YAFFA. Vous pouvez fermer ce widget.",
+    "Congratulations! Keep using YAFFA. You can dismiss this widget.": "Félicitations! Continuez à utiliser YAFFA. Vous pouvez fermer ce widget.",
     "Controls how numbers, dates, currencies are formatted.": "Contrôle le formatage des nombres, des dates et des devises.",
     "Controls the language used in YAFFA.": "Contrôle la langue utilisée dans YAFFA.",
     "Count": "Compter",
@@ -268,12 +268,12 @@
     "Investment income": "Revenus de placement",
     "Investment is in use, cannot be deleted": "L'investissement est en cours et ne peut être supprimé.",
     "Investment payment": "Paiement d'investissement",
-    "Investment price": "Prix ​​d'investissement",
-    "Investment price added": "Prix ​​d'investissement ajouté",
-    "Investment price deleted": "Prix ​​de l'investissement supprimé",
-    "Investment price updated": "Prix ​​de l'investissement mis à jour",
+    "Investment price": "Prix d'investissement",
+    "Investment price added": "Prix d'investissement ajouté",
+    "Investment price deleted": "Prix de l'investissement supprimé",
+    "Investment price updated": "Prix de l'investissement mis à jour",
     "Investment prices": "prix d'investissement",
-    "Investment prices successfully downloaded from :date": "Prix ​​des investissements téléchargés avec succès depuis :date",
+    "Investment prices successfully downloaded from :date": "Prix des investissements téléchargés avec succès depuis :date",
     "Investment timeline": "Calendrier d'investissement",
     "Investment updated": "Mise à jour des investissements",
     "Investment value": "valeur d'investissement",
@@ -290,7 +290,7 @@
     "Last quantity": "Dernière quantité",
     "Last transaction": "Dernière transaction",
     "Latest owned value": "dernière valeur détenue",
-    "Latest price": "Prix ​​actuel",
+    "Latest price": "Prix actuel",
     "Latest rate from base currency": "Dernier taux de change par rapport à la devise de base",
     "Latest rate to base currency": "Dernier taux de change par rapport à la devise de base",
     "Learn more": "Apprendre encore plus",
@@ -374,7 +374,7 @@
     "Not available": "Pas disponible",
     "Not set": "Non défini",
     "Number of records": "Nombre d'enregistrements",
-    "OK, let's do it!": "OK, allons-y !",
+    "OK, let's do it!": "OK, allons-y!",
     "Open": "Ouvrir",
     "Opening balance": "Solde d'ouverture",
     "Overview": "Aperçu",
@@ -521,7 +521,7 @@
     "The monthly summary for this account entity is being updated.": "Le récapitulatif mensuel de ce compte est en cours de mise à jour.",
     "The transaction is automatically entered on the next date.": "La transaction sera automatiquement enregistrée à la date suivante.",
     "There is no data to show on this chart.": "Aucune donnée n'est disponible pour ce graphique.",
-    "There was an error while getting account data: ": "Une erreur s'est produite lors de la récupération des données du compte :",
+    "There was an error while getting account data: ": "Une erreur s'est produite lors de la récupération des données du compte:",
     "There were some problems with your input.": "Votre saisie a rencontré quelques problèmes.",
     "These settings cannot be changed after saving the transaction.": "Ces paramètres ne peuvent plus être modifiés après l'enregistrement de la transaction.",
     "This account cannot be deleted.": "Ce compte ne peut pas être supprimé.",
