--- a/lang/hu.json
+++ b/lang/hu.json
@@ -128,7 +128,7 @@
     "Controls the language used in YAFFA.": "A YAFFA megjelenési nyelve.",
     "Count": "Gróf",
     "Create an account to start using YAFFA": "A YAFFA használatához hozz létre egy számlát",
-    "Crete from existing values": "Kréta a meglévő értékekből",
+    "Create from existing values": "Létrehozás meglévő értékekből",
     "Currencies": "Pénznemek",
     "Currency": "Pénznem",
     "Currency added": "Pénznem létrehozva",
@@ -618,21 +618,20 @@
     "callback.returnToPrimaryAccount": "Kiválasztott számlához",
     "callback.returnToSecondaryAccount": "Cél számlához",
     "callback.showTransaction": "Mutasd ezt a tranzakciót",
-    "click here to request another": "kattintson ide egy másik kéréséhez",
+    "click here to request another": "kattints ide egy másik kéréséhez",
     "commission": "jutalék",
     "dividend": "osztalék",
     "inactive": "inaktív",
     "investment": "befektetés",
-    "investment.requirement.currency": "befektetés.követelmény.pénznem",
-    "investment.requirement.investmentGroup": "befektetés.követelmény.befektetési csoport",
+    "investment.requirement.currency": "Befektetés létrehozása előtt kérjük, adjon hozzá legalább egy pénznemet. A befektetésekhez hozzá kell rendelni egy pénznemet.",
+    "investment.requirement.investmentGroup": "Befektetés létrehozása előtt kérjük, adjon hozzá legalább egy befektetési csoportot. Pl. részvények, kötvények stb. A befektetési csoportok segítenek a befektetések rendszerezésében.",
     "price": "ár",
     "quantity": "mennyiség",
     "sandbox.login.credentials": "<strong>Email-cím:</strong> demo@yaffa.cc <strong>Jelszó:</strong> demo",
     "sandbox.login.fill": "Belépés a demo fiókba",
     "sandbox.login.info": "Regisztrálj és készíts egy saját fiókot a teszteléshez. Használj eldobható email címet és bármilyen kitalált adatot. Ismerd meg a demo adatokat az alábbi belépési adatokkal.",
     "sandbox.reset.info": "A törlésig nézz körül és próbálj ki bármilyen funkciót.",
-    "sandbox.reset.timer": "A teszt környezetben az adatok rendszeresen visszaállításra kerülnek. Idő a következő törlésig: :days nap, :hours óra.",
-    "sandbox:reset:timer": "A sandbox környezetben található adatok rendszeresen törlődnek. A következő visszaállításig hátralévő idő: :days days and :hours hours.",
+    "sandbox.reset.timer": "A teszt környezetben az adatok rendszeresen visszaállításra kerülnek. Idő a következő törlésig :days nap, :hours óra.",
     "schedule count": "ütemezett számláló",
     "schedule end date": "ütemezés befejezési dátuma",
     "schedule frequency": "menetrend gyakorisága",
