fix: UI and translation updates

--- a/lang/en.json
+++ b/lang/en.json
@@ -30,6 +30,7 @@
     "Active": "Active",
     "Actual": "Actual",
     "Add Currency Rate": "Add Currency Rate",
+    "Add Investment Price": "Add Investment Price",
     "Add a category": "Add a category",
     "Add a currency": "Add a currency",
     "Add a new payee": "Add a new payee",
@@ -39,7 +40,6 @@
     "Add an account group": "Add an account group",
     "Add currency": "Add currency",
     "Add investment group": "Add investment group",
-    "Add investment price manually": "Add investment price manually",
     "Add new account": "Add new account",
     "Add new category": "Add new category",
     "Add new investment": "Add new investment",
@@ -170,6 +170,7 @@
     "E-Mail Address": "Email",
     "Edit": "Edit",
     "Edit Currency Rate": "Edit Currency Rate",
+    "Edit Investment Price": "Edit Investment Price",
     "Edit and create new schedule": "Edit and create new schedule",
     "Edit and insert instance": "Edit and insert instance",
     "Edit payee": "Edit payee",
@@ -271,8 +272,10 @@
     "Investment price": "Investment price",
     "Investment price added": "Investment price added",
     "Investment price deleted": "Investment price deleted",
+    "Investment price history": "Investment price history",
     "Investment price updated": "Investment price updated",
-    "Investment prices": "Investment prices",
+    "Investment price values": "Investment price values",
+    "Investment prices of :name": "Investment prices of :name",
     "Investment prices successfully downloaded from :date": "Investment prices successfully downloaded from :date",
     "Investment timeline": "Investment timeline",
     "Investment updated": "Investment updated",
@@ -295,11 +298,12 @@
     "Latest rate to base currency": "Latest rate to base currency",
     "Learn more": "Learn more",
     "Linked transaction": "Linked transaction",
+    "List and manage investment prices": "List and manage investment prices",
     "List of currencies": "List of currencies",
     "List of investments": "List of investments",
-    "List prices": "List prices",
     "Load account transaction history": "Load account transaction history",
     "Load data": "Load data",
+    "Load missing investment prices": "Load missing investment prices",
     "Load missing rates": "Load missing rates",
     "Load new currency rates": "Load new currency rates",
     "Load new price data": "Load new price data",
@@ -367,6 +371,7 @@
     "No data available": "No data available",
     "No investment groups found": "No investment groups found",
     "No items added": "No items added",
+    "No price provider configured for this investment": "No price provider configured for this investment",
     "No transactions": "No transactions",
     "No, thanks": "No, thanks",
     "None": "None",
@@ -403,7 +408,6 @@
     "Previous month": "Previous month",
     "Previous month to date": "Previous month to date",
     "Price": "Price",
-    "Price history": "Price history",
     "Price provider": "Price provider",
     "Process email again": "Process email again",
     "Processed": "Processed",
