--- a/lang/fr.json
+++ b/lang/fr.json
@@ -39,7 +39,6 @@
     "Add an account group": "Ajouter un groupe de comptes",
     "Add currency": "Ajouter une devise",
     "Add investment group": "Ajouter un groupe d'investissement",
-    "Add investment price manually": "Ajouter manuellement le prix de l'investissement",
     "Add new account": "Ajouter un nouveau compte",
     "Add new category": "Ajouter une nouvelle catégorie",
     "Add new investment": "Ajouter de nouveaux investissements",
@@ -271,8 +270,9 @@
     "Investment price": "Prix d'investissement",
     "Investment price added": "Prix d'investissement ajouté",
     "Investment price deleted": "Prix de l'investissement supprimé",
+    "Investment price history": "Historique des prix d'investissement",
     "Investment price updated": "Prix de l'investissement mis à jour",
-    "Investment prices": "prix d'investissement",
+    "Investment prices of :name": "Prix d'investissement pour :name",
     "Investment prices successfully downloaded from :date": "Prix des investissements téléchargés avec succès depuis :date",
     "Investment timeline": "Calendrier d'investissement",
     "Investment updated": "Mise à jour des investissements",
@@ -295,9 +295,9 @@
     "Latest rate to base currency": "Dernier taux de change par rapport à la devise de base",
     "Learn more": "Apprendre encore plus",
     "Linked transaction": "Transaction liée",
+    "List and manage investment prices": "Lister et gérer les prix des investissements",
     "List of currencies": "Liste des devises",
     "List of investments": "Liste des investissements",
-    "List prices": "Prix catalogue",
     "Load account transaction history": "Historique des transactions du compte",
     "Load data": "Charger les données",
     "Load missing rates": "Charger les taux manquants",
@@ -403,7 +403,6 @@
     "Previous month": "Le mois précédent",
     "Previous month to date": "Le mois précédent à ce jour",
     "Price": "Prix",
-    "Price history": "Historique des prix",
     "Price provider": "Fournisseur de prix",
     "Process email again": "Traiter à nouveau l'e-mail",
     "Processed": "Traité",
