--- a/lang/hu.json
+++ b/lang/hu.json
@@ -39,7 +39,6 @@
     "Add an account group": "Számla csoport hozzáadása",
     "Add currency": "Pénznem hozzáadása",
     "Add investment group": "Befektetési csoport hozzáadása",
-    "Add investment price manually": "Befektetési ár manuális hozzáadása",
     "Add new account": "Új számla",
     "Add new category": "Új kategória",
     "Add new investment": "Új befektetés",
@@ -150,8 +149,8 @@
     "Dashboard": "Áttekintés",
     "Database error:": "Adatbázis hiba:",
     "Date": "Dátum",
-    "Date from": "Dátum innen:",
-    "Date to": "Dátum kezdete",
+    "Date from": "Dátum ettől",
+    "Date to": "Dátum eddig",
     "Default": "Alapértelmezett",
     "Default category": "Alapértelmezett kategória",
     "Delete": "Törlés",
@@ -268,11 +267,12 @@
     "Investment income": "Befektetési jövedelem",
     "Investment is in use, cannot be deleted": "A befektetés használatban van, nem törölhető",
     "Investment payment": "Befektetési kifizetés",
-    "Investment price": "Befektetési ár",
-    "Investment price added": "Befektetési ár hozzáadva",
-    "Investment price deleted": "Befektetési ár törölve",
-    "Investment price updated": "Befektetési ár frissítve",
-    "Investment prices": "Befektetési árak",
+    "Investment price": "Befektetés árfolyam",
+    "Investment price added": "Befektetés árfolyam rögzítve",
+    "Investment price deleted": "Befektetés árfolyam törölve",
+    "Investment price history": "Befektetés árfolyam történet",
+    "Investment price updated": "Befektetés árfolyam frissítve",
+    "Investment prices of :name": ":name árfolyam adatai",
     "Investment prices successfully downloaded from :date": "Befektetési árak sikeresen letöltve innen: :date",
     "Investment timeline": "Befektetési ütemterv",
     "Investment updated": "Befektetési adatok frissítése",
@@ -295,9 +295,9 @@
     "Latest rate to base currency": "Legutóbbi árfolyam az alapdevizához viszonyítva",
     "Learn more": "Tudj meg többet!",
     "Linked transaction": "Kapcsolt tranzakció",
+    "List and manage investment prices": "Befektetés árfolyamok listázása és kezelése",
     "List of currencies": "Valuták listája",
     "List of investments": "Befektetések listája",
-    "List prices": "Listaárak",
     "Load account transaction history": "Számla tranzakciós előzményeinek betöltése",
     "Load data": "Adatok betöltése",
     "Load missing rates": "Hiányzó árfolyamok betöltése",
@@ -403,7 +403,6 @@
     "Previous month": "Előző hónap",
     "Previous month to date": "Előző hónap a mai napig",
     "Price": "Ár",
-    "Price history": "Árelőzmények",
     "Price provider": "Adatszolgáltató",
     "Process email again": "E-mail újbóli feldolgozása",
     "Processed": "Feldolgozott",
@@ -466,7 +465,7 @@
     "Select payee to be merged": "Válassza ki az egyesítendő kedvezményezettet",
     "Select payee to be merged into": "Válassza ki a kedvezményezettet, akivel egyesíteni szeretné",
     "Select payees to merge": "Válassza ki az egyesítendő kedvezményezetteket",
-    "Select preset": "Előbeállítás kiválasztása",
+    "Select preset": "Dátum tartomány választása",
     "Select tag(s)": "Válaszz címké(ke)t",
     "Selected": "Kiválasztott",
     "Sell": "Eladás",
